# openfiles

./: .gitignore  README.md  RELEASE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: config.json  python-sdk-initial.md
.github/workflows/: release.yml
docs/: CLAUDE.md  mint.json  openapi.json  package.json  sdk-openapi.json
docs/api-reference/: authentication.mdx  errors.mdx  quickstart.mdx
docs/api-reference/files/: append-content-to-file.mdx  edit-file-with-string-replacement.mdx  overwrite-file-content-completely.mdx  read-file-or-get-metadata.mdx
docs/api-reference/project/: get-project-info.mdx  regenerate-api-key.mdx
docs/api-reference/system/: health-check.mdx
docs/getting-started/: choose-your-path.mdx  introduction.mdx  quickstart.mdx
docs/guides/: core-client.mdx  openai-integration.mdx  overview.mdx  tools-integration.mdx
docs/resources/: examples.mdx  roadmap.mdx  support.mdx
docs/scripts/: prebuild.js
examples/python/document-manager/: .env.example  .gitignore  README.md  package.json  pyproject.toml
examples/python/document-manager/src/: core_example.py  openai_example.py  tools_example.py
examples/python/document-manager/src/shared/: sample_data.py  session_utils.py
examples/typescript/: README.md
examples/typescript/ai-chat-app/: .gitignore  CHANGELOG.md  README.md  package.json
examples/typescript/document-manager/: .env.example  .gitignore  CHANGELOG.md  README.md  (+2 more)
sdks/python/: package.json  pyproject.toml
sdks/typescript/: CHANGELOG.md  README.md  package.json  tsconfig.json
(+41 files in other folders)
